<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background_light"
    tools:context=".ImcActivity">

    <LinearLayout
        android:id="@+id/top_buttons_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_gravity="top|end">

        <Button
            android:id="@+id/btnToggleThemeImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_theme"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnHomeImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_hub" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_title"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/on_background_light" />

    <EditText
        android:id="@+id/pesoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imc_peso_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/alturaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imc_altura_hint"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_calculate_button"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/imcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_result"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="16dp"
        android:textColor="@color/on_background_light" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_status_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/pesoIdealTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_subtitle"
        android:textColor="@color/on_background_light" />

    <ImageView
        android:id="@+id/statusImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>