<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_normal"
    android:background="@color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hub_title"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_normal"
        android:textColor="@color/on_background_light"/>

    <Button
        android:id="@+id/btnPlacar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hub_button_margin"
        android:text="@string/placar_button" />

    <Button
        android:id="@+id/btnCalculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hub_button_margin"
        android:text="@string/calculadora_button" />

    <Button
        android:id="@+id/btnImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hub_button_margin"
        android:text="@string/imc_button" />

    <Button
        android:id="@+id/btnToggleThemeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hub_button_margin"
        android:text="@string/toggle_theme" />

    <ImageView
        android:id="@+id/hubImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/hub"
        android:contentDescription="@string/hub_title" />

</LinearLayout>